tests/conformance/typecheck/invalid/narrowing_impossible.ks
// EXPECT: Cannot narrow
fun f(x: Int): Bool = x is String
